[gd_scene load_steps=3 format=3 uid="uid://b0v7ujsd22quh"]

[ext_resource type="Script" path="res://UI Scripts/weapon_blurb.gd" id="1_5s1w2"]

[sub_resource type="ImageTexture" id="ImageTexture_hskyt"]

[node name="WeaponBlurb" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -826.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5s1w2")

[node name="WeaponName" type="LineEdit" parent="."]
layout_mode = 2
text = "WeaponName"
alignment = 1
expand_to_text_length = true

[node name="AttackBonus" type="SpinBox" parent="."]
layout_mode = 2
theme_override_icons/updown = SubResource("ImageTexture_hskyt")
allow_greater = true
allow_lesser = true
alignment = 1
prefix = "+"

[node name="DamageType" type="LineEdit" parent="."]
layout_mode = 2
text = "DamageType"
alignment = 1
expand_to_text_length = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 2
stretch_mode = 1
alignment_horizontal = 0

[node name="DeleteButton" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
text = "âˆ’"

[connection signal="pressed" from="AspectRatioContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
